--- a/src/Components/Home/Home.css
+++ b/src/Components/Home/Home.css
@@ -68,4 +68,11 @@
 .overlay-offer .row > div {
     margin-bottom: 1rem; /* Add space between rows */
 }
+.get-offer h4{
+    font-size: 1.5rem;
+}
+.scan-prescription h4{
+    font-size: 1.5rem;
+}
+
 }
