--- a/src/Components/Donation/donation.css
+++ b/src/Components/Donation/donation.css
@@ -1,11 +1,9 @@
-/* Hide the up/down arrows for input[type=number] in WebKit browsers. */
 input[type="number"]::-webkit-inner-spin-button,
 input[type="number"]::-webkit-outer-spin-button {
     -webkit-appearance: none;
     margin: 0;
 }
 
-/* Hide the up/down arrows for input[type=number] in Firefox */
 input[type="number"] {
     appearance: textfield;
 }
@@ -15,10 +13,9 @@ input[type="number"] {
     left: 0;
     width: 100%;
     height: 100%;
-    background-color: rgba(0,0,0,0.5);
+    background-color: rgb(123, 164, 242, 0.8) !important;
     z-index: 1040;
 }
-
 .thank-you-card {
     position: fixed; 
     top: 50%; 
@@ -27,7 +24,7 @@ input[type="number"] {
     z-index: 1050;
 }
 .rtl-flip-image {
-    transform: scaleX(-1); /* Flips the image horizontally */
+    transform: scaleX(-1); 
 }
 .donation-amount span{
     border-radius: 0;
